--- a/.gitignore
+++ b/.gitignore
@@ -368,12 +368,17 @@ fabric.properties
 ### WebStorm Patch ###
 # Comment Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-215987721
 
-# *.iml
-# modules.xml
-# .idea/misc.xml
-# *.ipr
+*.iml
+modules.xml
+.idea/misc.xml
+.idea/vcs.xml
+*.ipr
+yarn.lock
+.idea/*
+
 
 # Sonarlint plugin
 .idea/sonarlint
 
 # End of https://www.gitignore.io/api/node,webstorm,reactnative
+
